@@ -1,3 +1,5 @@
+* Force fuse.Object._each() to skip the `prototype` property on functions because browsers are not consistent one way or the other. [jddalton]
+
 * Use the global.opera [[Class]] value for better Opera agent detection. [jddalton, Paul Irish]
 
 * Ensure private function toInteger() works with extremely large negative values. [Asen Bozhilov, jddalton]
